# SirMetal

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
MetalSandbox/MetalSandbox.xcodeproj/: project.pbxproj
MetalSandbox/MetalSandbox.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MetalSandbox/MetalSandbox/Base.lproj/: MainMenu.xib
MetalSandbox/MetalSandbox/src/: AAPLRenderer.h  AAPLRenderer.mm  AppDelegate.hpp  AppDelegate.mm  ShaderManager.h  ShaderManager.mm  engineContext.h  engineContext.mm  main.mm
MetalSandbox/MetalSandbox/src/shaders/: Shaders.metal
SirMetal.xcworkspace/: contents.xcworkspacedata
SirMetal.xcworkspace/xcuserdata/marcogiordano.xcuserdatad/: UserInterfaceState.xcuserstate
SirMetal.xcworkspace/xcuserdata/marcogiordano.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SirMetal/SirMetal/: Info.plist
SirMetal/SirMetal.xcodeproj/: project.pbxproj
SirMetal/SirMetal.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SirMetal/SirMetal/Base.lproj/: MainMenu.xib
SirMetal/SirMetal/src/: AAPLRenderer.h  AAPLRenderer.mm  AppDelegate.hpp  AppDelegate.mm  MBEMathUtilities.h  engineContext.h  engineContext.mm  entryPoint.h  entryPoint.mm  main.mm
SirMetal/SirMetal/src/core/: bufferedLog.h  file.mm  flags.h  input.h  jsonParse.h  log.h  log.mm
SirMetal/SirMetal/src/editor/: project.h  project.mm  settings.h  settings.mm
SirMetal/SirMetal/src/graphics/: camera.h  camera.mm  renderingContext.h
SirMetal/SirMetal/src/platform/: file.h
SirMetal/SirMetal/src/resources/: TextureManager.h  TextureManager.mm  handle.h  shaderManager.h  shaderManager.mm
SirMetal/SirMetal/src/ui/: editorUI.h  editorUI.mm  materialWidget.h  materialWidget.mm
SirMetalLib/SirMetalLib/: SirMetalLib.h  SirMetalLib.mm  engineContext.h  engineContext.mm
SirMetalLib/SirMetalLib.xcodeproj/: project.pbxproj
SirMetalLib/SirMetalLib/core/: core.h  file.h  file.mm  input.h  jsonParse.h
SirMetalLib/SirMetalLib/core/logging/: log.h  log.mm
SirMetalLib/SirMetalLib/debug/: imguiRenderer.h  imguiRenderer.mm
SirMetalLib/SirMetalLib/graphics/: PSOGenerator.h  PSOGenerator.mm  camera.h  camera.mm  constantBufferManager.h  constantBufferManager.mm  materialManager.h  renderingContext.h  renderingContext.mm
SirMetalLib/SirMetalLib/resources/: handle.h  shaderManager.h  shaderManager.mm  textureManager.mm
SirMetalLib/SirMetalLib/vendors/: fast_obj.h
SirMetalLib/SirMetalLib/world/: hierarchy.h  hierarchy.mm
SirMetalTests/SirMetalTests/: denseTreeTests.mm  main.cpp
SirMetalTests/SirMetalTests.xcodeproj/: project.pbxproj
data/01_jumpFlooding/: Shaders.metal  jumpFlood.metal  jumpInit.metal  jumpMask.metal  jumpOutline.metal
data/02_pcf_pcss/: shadows.metal
data/03_basic_rt/: fullscreen.metal  rtGen.metal  rtShade.metal  rtShadow.metal
data/04_gltf_args/: test.glb
data/05_modern_rt/: Shaders.metal  fullscreen.metal
data/06_lightmapping/: Shaders.metal  gbuffClear.metal  test.glb
data/builtinShaders/: solidColor.metal
data/sandbox/: Shaders.metal  fullscreen.metal  gbuff.metal  gbuffClear.metal  imageFill.metal  rtGen.metal  rtLightMap.metal  rtMono.metal  rtShade.metal  rtShadow.metal  test.glb  test.gltf  testOld2.glb
engine/: CMakeLists.txt
engine/src/SirMetal/: MBEMathUtilities.cpp  engine.cpp  engine.h
engine/src/SirMetal/application/: application.cpp  application.h  layer.h  layerStack.cpp  layerStack.h  window.cpp  window.h
engine/src/SirMetal/core/: clock.h  core.h  event.h  input.h  mathUtils.cpp  mathUtils.h
engine/src/SirMetal/core/hashing/: hashing.h
engine/src/SirMetal/core/memory/: denseTree.cpp
engine/src/SirMetal/core/memory/cpu/: hashMap.h  linearBufferManager.cpp  linearBufferManager.h  overridingRingBuffer.h  randomSizeAllocator.h  resizableVector.h  ringBuffer.h  sparseMemoryPool.h  stackAllocator.h  stringHashMap.h  stringPool.cpp  stringPool.h  threeSizesPool.h
engine/src/SirMetal/core/memory/gpu/: GPUMemoryAllocator.cpp  GPUMemoryAllocator.h  GPUMemoryAllocator.mm
engine/src/SirMetal/graphics/: PSOGenerator.cpp  PSOGenerator.h  blit.cpp  blit.h  camera.cpp  camera.h  constantBufferManager.cpp  constantBufferManager.h  graphicsDefines.h  lightmapper.cpp  lightmapper.h  materialManager.h  metalBvh.cpp  metalBvh.h  renderingContext.cpp  renderingContext.h
engine/src/SirMetal/graphics/debug/: debugRenderer.cpp  debugRenderer.h  frameTimingsWidget.cpp  frameTimingsWidget.h  gpuWidget.cpp  gpuWidget.h  imguiRenderer.cpp  imguiRenderer.h
engine/src/SirMetal/io/: file.mm  fileUtils.cpp  fileUtils.h  json.cpp  json.h
engine/src/SirMetal/resources/: gltfLoader.cpp  gltfLoader.h  handle.h  resourceTypes.h  shaderManager.cpp  shaderManager.h  textureManager.cpp  textureManager.h
engine/src/SirMetal/resources/meshes/: gltfMesh.cpp  gltfMesh.h  meshLoadType.h  meshManager.cpp  meshManager.h  meshOptimize.cpp  meshOptimize.h  objparser.cpp  objparser.h  wavefrontobj.cpp  wavefrontobj.h
engine/src/SirMetal/resources/textures/: gltfTexture.cpp  gltfTexture.h
samples/01_jumpFlooding/: CMakeLists.txt  app.h  config.json  graphicsLayer.cpp  graphicsLayer.h  main.cpp  selectionRendering.cpp
samples/02_pcf_pcss/: CMakeLists.txt  config.json  graphicsLayer.cpp  graphicsLayer.h  main.cpp
samples/03_basic_rt/: CMakeLists.txt  config.json  graphicsLayer.cpp  graphicsLayer.h
samples/04_gltf_args/: CMakeLists.txt  config.json  graphicsLayer.cpp  graphicsLayer.h  sandbox.h
samples/05_modern_rt/: CMakeLists.txt  config.json  graphicsLayer.cpp  graphicsLayer.h
samples/06_lightmapping/: CMakeLists.txt  config.json
sandbox/: CMakeLists.txt  graphicsLayer.cpp  graphicsLayer.h  main.cpp  main.mm  selectionRendering.cpp  selectionRendering.h
tests/: CMakeLists.txt
tests/src/: hashMapTests.cpp  linearBufferTrackerTests.cpp  main.cpp  memoryPoolTests.cpp  overridingRingBufferTests.cpp  randomSizeAllocatorTests.cpp  resizableVectorTests.cpp  ringBufferTests.cpp  statAllocatorTests.cpp  stringPoolAllocatorTests.cpp  treeSizesAllocatorTests.cpp
(+37 files in other folders)
